# PRDIS

./: LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.py  scenarios.py
prdis/: __init__.py  core.py  models.py
tests/: test_core.py
web/: index.html
